WIW Cloud - First commit

--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -64,7 +64,7 @@ detailLineItemTableNoDataText=No Email
 detailLineItemTableHeading=Email
 
 #XTIT: Title of the Email table
-detailLineItemTableHeadingCount=Email Adresses ({0})
+detailLineItemTableHeadingCount=Email Addresses ({0})
 
 #XGRP: Title for the SEQNR column in the Email table
 detailLineItemTableIDColumn=SEQNR
